--- a/nomina/css/styles.css
+++ b/nomina/css/styles.css
@@ -548,3 +548,36 @@ footer {
     background: linear-gradient(135deg, #3498db, #2980b9);
     border-left: 5px solid #2980b9;
 }
+
+
+/*Agregado para los estilos de la navbar*/
+
+/* Menú principal horizontal */
+.menu {
+  background: linear-gradient(135deg, #2c3e50, #4a6491);
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 10px 0;
+  position: relative;
+  margin-top: 0px;
+  margin-bottom: 5px;
+}
+
+.menu > li {
+  position: relative;
+  margin: 0 15px;
+}
+
+.menu > li > a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1em;
+  transition: color 0.3s;
+}
+
+.menu > li > a:hover {
+  color: #d68910;
+}
